# AgenticRAG

./: .env  .gitignore  README.md  app.py  augmentation.py  chunks.py  datasets.py  main.py  main_busca.py  pyproject.toml  query.py  semantic_encoder.py  test_gemini_connection.py
.claude/: settings.local.json
agentRAG/: __init__.py  agenticRAG.py  agenticRAGAbstract.py  agenticRAGCrewai.py  agenticRAGemini.py
